fix shrink-wrap columns extending full height

--- a/scss/core/layout/_grids.scss
+++ b/scss/core/layout/_grids.scss
@@ -111,6 +111,7 @@
 
     @if $use-flexbox-grid {
       display: flex;
+      flex-direction: column;
       flex: 1;
     }
   }
@@ -133,7 +134,10 @@
     }
 
 
-    @if $use-flexbox-grid { display: flex;}
+    @if $use-flexbox-grid {
+      display: flex;
+      flex-direction: column;
+    }
   }
 
 
